--- a/WCFApp/WCFServer/App.config
+++ b/WCFApp/WCFServer/App.config
@@ -76,7 +76,7 @@
           <add
             xmlns:s="http://www.w3.org/2003/05/soap-envelope"
             xmlns:a="http://www.w3.org/2005/08/addressing">
-            s:Envelope/s:Header/a:Action[not(contains(text(),'IConnectionRegister') or contains(.,'IHostInfo/GetHostStatus') or contains(.,'2005/02/trust'))]
+            s:Envelope/s:Header/a:Action[not(contains(text(),'IConnectionRegister') or contains(.,'2005/02/trust'))]
           </add>
         </filters>
       </messageLogging>
@@ -104,7 +104,10 @@
     </sources>
 
     <sharedListeners>
-      <add name="TextFileListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\WCFServer.e2e" />
+      <add 
+        name="TextFileListener"
+        type="System.Diagnostics.XmlWriterTraceListener"
+        initializeData="c:\personal\dotnext2016spb\WCFServer.e2e" />
     </sharedListeners>
   </system.diagnostics>
 </configuration>
